--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.9",
     "@tailwindcss/typography": "^0.5.13",
     "next": "14.2.3",
     "react": "^18",
